--- a/docs/translations/it-IT/it-IT.json
+++ b/docs/translations/it-IT/it-IT.json
@@ -14,6 +14,7 @@
   "or": "o",
   "history": "cronologia",
   "template": "modello",
+  "templates": "modelli",
   "notImplemented": "Non implementato",
   "saveChanges": "Salva le modifiche",
   "discardChanges": "Annulla le modifiche",
@@ -46,6 +47,7 @@
   "menuColors": "Colori",
   "menuTrash": "Cestino",
   "menuSetGeneral": "Generale",
+  "menuSetBrowser": "Browser",
   "menuSetAbout": "Info",
   "menuSetDevices": "Dispositivi",
   "menuAlertNoTags": "Nessun tag",
@@ -344,6 +346,7 @@
   "autoTypeSelectionHintOpt": "Scrivi solo il nome utente",
   "autoTypeSelectionHintShift": "Altri campi",
   "autoTypeSelectionOtp": "One-time password",
+  "autoTypeUnlockMessage": "Sblocca per autocompilazione",
   "appSecWarn": "Non sicuro!",
   "appSecWarnBody1": "Hai caricato questa applicazione con una connessione insicura. Qualcuno potrebbe spiarti e rubare le tue password. Consigliamo caldamente chiudere l'applicazione se non si comprende chiaramente cosa sta succedendo.",
   "appSecWarnBody2": "Si, il database è criptato ma nessuno può garantire che l'applicazione non sia stata modificata.",
@@ -408,6 +411,7 @@
   "setGenThemeLt": "Terminale chiaro",
   "setGenThemeHighContrast": "Alto contrasto",
   "setGenThemeHc": "Alto contrasto",
+  "setGenThemeDc": "Alto contrasto scuro",
   "setGenThemeSol": "Abbronzato",
   "setGenThemeSd": "Solarized dark",
   "setGenThemeSl": "Solarized light",
@@ -455,6 +459,8 @@
   "setGenLockAutoType": "Blocco automatico su scrittura automatica",
   "setGenLockOrSleep": "Quando il computer è bloccato o ibernato",
   "setGenStorage": "Archivio",
+  "setGenDisableOfflineStorage": "Non memorizzare nella cache i file caricati nell'archivio offline",
+  "setGenShortLivedStorageToken": "Usa sessioni di breve durata per l'archiviazione in cloud",
   "setGenStorageLogout": "Esci",
   "setGenShowAdvanced": "Mostra impostazioni avanzate",
   "setGenDevTools": "Mostra dev tools",
@@ -463,16 +469,23 @@
   "setGenTryBetaWarningBody": "Per favore, salva tutti i file e clicca nuovamente questo bottone",
   "setGenShowAppLogs": "Mostra log app",
   "setGenReloadApp": "Ricarica l'app",
+  "setGenFieldLabelDblClickAutoType": "Autocompilazione tramite doppio click sulle etichette dei campi",
   "setGenTouchId": "Touch ID",
   "setGenTouchIdDisabled": "Non usare Touch ID",
   "setGenTouchIdMemory": "Sblocca con Touch ID solo quando KeeWeb è in esecuzione",
   "setGenTouchIdFile": "Usa sempre Touch ID invece della master password",
   "setGenTouchIdPass": "Richiedi la master password dopo",
   "setGenAudit": "Pubblico",
+  "setGenAuditPasswords": "Mostra avvisi sul livello di sicurezza password",
+  "setGenAuditPasswordEntropy": "Verifica randomizzazione e lunghezza password",
   "setGenExcludePinsFromAudit": "Non controllare codici numerici corti (PIN), tipo 123456",
   "setGenCheckPasswordsOnHIBP": "Controlla la password usando un servizio online {}",
+  "setGenHelpHIBP": "Attraverso un servizio online, KeeWeb può verificare se le tue password sono state precedentemente esposte in una violazione dei dati (data breach). La tua password non può essere recuperata in base ai dati inviati online, tuttavia il numero di password verificate in questo modo potrebbe essere esposto. Ulteriori informazioni sulla tua privacy quando utilizzi questo servizio sono disponibili {}. Se questa opzione è abilitata, KeeWeb controllerà automaticamente le tue password.",
   "setGenHelpHIBPLink": "qui",
   "setGenAuditPasswordAge": "Vecchia password",
+  "setGenAuditPasswordAgeOff": "Non mostrare avvisi per le vecchie password",
+  "setGenAuditPasswordAgeOneYear": "Mostra avvisi per password più vecchie di un anno",
+  "setGenAuditPasswordAgeYears": "Mostra avvisi per password più vecchie di {} anni",
   "setFilePath": "Percorso file",
   "setFileStorage": "Questo file è stato caricato da {}.",
   "setFileIntl": "Questo file è salvato nella memoria interna dell'applicazione",
@@ -607,6 +620,12 @@
   "setPlTranslateLink": "tradurre l'applicazione nella tua lingua",
   "setPlAutoUpdate": "Aggiorna automaticamente",
   "setPlLoadGallery": "Carica galleria plugin",
+  "setBrowserTitle": "Browser",
+  "setBrowserIntroDesktop": "KeeWeb può inserire le password utilizzando l'autocompilazione, tuttavia utilizzare un'estensione del browser potrebbe essere un modo più efficace per farlo. KeeWeb supporta due estensioni:",
+  "setBrowserIntroKeeWebConnect": "l'estensione ufficiale di KeeWeb è costruita pensando alle funzionalità di KeeWeb, ma potresti perdere alcune funzionalità avanzate che puoi trovare nell'altra estensione.",
+  "setBrowserIntroKeePassXcBrowser": "questa estensione è stata sviluppata per KeePassXC; è stata rilasciata da diverso tempo ed è piuttosto robusta. L'estensione, però, non fa parte di KeeWeb e potrebbero esserci problemi di compatibilità.",
+  "setBrowserIntroWeb": "Installa la nostra estensione del browser per compilare automaticamente le password da KeeWeb su pagine diverse. L'estensione del browser si collegherà a una scheda KeeWeb nel browser per recuperare le password. Clicca qui per scaricare l'estensione:",
+  "setBrowserNotEnabled": "L'integrazione del browser non è abilitata; le estensioni non saranno in grado di connettersi a KeeWeb. Utilizza le seguenti caselle di controllo per abilitarle:",
   "setDevicesTitle": "Dispositivi",
   "setDevicesEnableUsb": "Abilita interazione con i dispositivi USB",
   "setDevicesYubiKeyIntro": "Si consiglia di leggere {} prima di utilizzare una YubiKey.",
