--- a/docs/translations/nl-NL/nl-NL.json
+++ b/docs/translations/nl-NL/nl-NL.json
@@ -433,7 +433,7 @@
   "setGenUseMarkdown": "Markdown-opmaak in notities",
   "setGenUseGroupIconForEntries": "Bij nieuwe items automatisch het groepspictogram toepassen",
   "setGenDirectAutotype": "Als er slechts één overeenkomstig item wordt gevonden, gebruik dat dan om automatisch in te vullen",
-  "setGenFunction": "Functie",
+  "setGenFunction": "Functionaliteit",
   "setGenAutoSyncOnClose": "Bij afsluiten automatisch opslaan en synchroniseren",
   "setGenAutoSyncTimer": "Periodiek automatisch opslaan en synchroniseren:",
   "setGenAutoSyncTimerOff": "Uitgeschakeld",
@@ -682,7 +682,7 @@
   "setAboutSource": "De broncode en issues zijn beschikbaar op {}.",
   "setHelpFormat": "Bestandsformaat",
   "setHelpFormatBody": "Dit is een port van de {} app gebouwd met web-technologie. Het werkt met bestanden van het KeePass formaat (kdbx). Je kunt deze bestanden (wachtwoord databases) aanmaken in KeePass of in deze app zelf. Het bestandsformaat is 100% compatibel en zou door beide apps verwerkt moeten kunnen worden.",
-  "setHelpProblems": "Hulp nodig ?",
+  "setHelpProblems": "Hulp nodig?",
   "setHelpProblems1": "Als er iets mis gaat, {}",
   "setHelpProblems2": "of {}",
   "setHelpOpenIssue": "open een issue op GitHub",
