--- a/docs/translations/pt-BR/pt-BR.json
+++ b/docs/translations/pt-BR/pt-BR.json
@@ -38,7 +38,7 @@
   "oneYear": "um ano",
   "cache": "cache",
   "file": "arquivo",
-  "device": "Dispositivo",
+  "device": "dispositivo",
   "webdav": "WebDAV",
   "dropbox": "Dropbox",
   "gdrive": "Google Drive",
@@ -50,19 +50,19 @@
   "menuSetBrowser": "Navegador",
   "menuSetAbout": "Sobre",
   "menuSetDevices": "Dispositivos",
-  "menuAlertNoTags": "Sem tags",
-  "menuAlertNoTagsBody": "Você pode adicionar novas tags durante a edição de campos, na seção Tags.",
-  "menuEmptyTrash": "Lixo",
+  "menuAlertNoTags": "Sem etiquetas",
+  "menuAlertNoTagsBody": "Você pode adicionar novas etiquetas durante a edição de campos, na seção Etiquetas.",
+  "menuEmptyTrash": "Esvaziar a Lixeira",
   "menuEmptyTrashAlert": "Esvaziar a Lixeira?",
   "menuEmptyTrashAlertBody": "Você não será capaz de recuperar os itens",
-  "menuItemCollapsed": "Clique duas vezes para expandir",
+  "menuItemCollapsed": "Duplo clique para expandir",
   "menuRestoreApp": "Abrir {}",
   "menuQuitApp": "Fechar {}",
   "sysMenuAboutKeeWeb": "Sobre o {}",
   "sysMenuServices": "Serviços",
-  "sysMenuHide": "Esconder o {}",
-  "sysMenuHideOthers": "Esconder outros",
-  "sysMenuUnhide": "Mostrar todos",
+  "sysMenuHide": "Ocultar {}",
+  "sysMenuHideOthers": "Ocultar Outros",
+  "sysMenuUnhide": "Mostrar Todos",
   "sysMenuQuit": "Sair do {}",
   "sysMenuEdit": "Editar",
   "sysMenuUndo": "Desfazer",
@@ -70,10 +70,10 @@
   "sysMenuCut": "Cortar",
   "sysMenuCopy": "Copiar",
   "sysMenuPaste": "Colar",
-  "sysMenuSelectAll": "Selecionar tudo",
+  "sysMenuSelectAll": "Selecionar Tudo",
   "sysMenuWindow": "Janela",
   "sysMenuMinimize": "Minimizar",
-  "sysMenuClose": "Fechar janela",
+  "sysMenuClose": "Fechar Janela",
   "alertYes": "Sim",
   "alertNo": "Não",
   "alertOk": "OK",
@@ -84,26 +84,26 @@
   "alertDoNotAsk": "Não perguntar mais",
   "alertAllow": "Permitir",
   "alertDeny": "Negar",
-  "appBeta": "AVISO: versão beta, apenas para inspeção",
+  "appBeta": "AVISO: versão beta, apenas para preview",
   "footerOpen": "Abrir / Novo",
   "footerSyncError": "Erro de sincronização",
   "footerTitleGen": "Gerar",
-  "footerTitleLock": "Travar",
+  "footerTitleLock": "Bloquear",
   "genLen": "Comprimento",
   "genNewPass": "Nova senha",
   "genPresetDefault": "padrão predefinido",
-  "genPresetDerived": "Como senha antiga",
+  "genPresetDerived": "como senha antiga",
   "genPresetPronounceable": "pronunciável",
   "genPresetMed": "médio",
   "genPresetLong": "longo",
   "genPresetPin4": "PIN de 4 dígitos",
   "genPresetMac": "Endereço MAC",
   "genPresetHash128": "hash de 128-bit",
-  "genPresetHash256": "hash de 256 bits",
-  "genHidePass": "Esconder senha",
+  "genPresetHash256": "hash de 256-bit",
+  "genHidePass": "Ocultar senha",
   "genShowPass": "Mostrar senha",
   "grpTitle": "Grupo",
-  "grpSearch": "Ativar entradas de pesquisa neste grupo",
+  "grpSearch": "Ativar pesquisa de entradas neste grupo",
   "grpAutoType": "Ativar auto-teclar",
   "grpAutoTypeSeq": "Sequência de auto-teclar",
   "grpAutoTypeSeqDefault": "Usar sequência de auto-teclar padrão",
@@ -112,9 +112,9 @@
   "tagTrash": "Remover a etiqueta de todas as entradas",
   "tagRename": "Renomear",
   "tagTrashQuestion": "Remover a etiqueta de todas as entradas?",
-  "tagTrashQuestionBody": "Essa etiqueta será removida de todas as entradas. Não há uma maneira fácil de a colocar de volta.",
+  "tagTrashQuestionBody": "Essa etiqueta será removida de todas as entradas. Não há como reverter esta ação.",
   "tagExists": "Etiqueta já existe",
-  "tagExistsBody": "Tag com esse nome já existe. Por favor, escolha outro nome.",
+  "tagExistsBody": "Etiqueta com esse nome já existe. Por favor, escolha outro nome.",
   "tagBadName": "Nome ruim",
   "tagBadNameBody": "Nome da etiqueta não pode conter caracteres {}. Por favor, remova-os.",
   "genPsTitle": "Predefinições do gerador",
@@ -127,34 +127,34 @@
   "genPsUpper": "Letras latinas maiúsculas",
   "genPsLower": "Letras latinas minúsculas",
   "genPsDigits": "Dígitos",
-  "genPsSpecial": "Símbolos especiais",
+  "genPsSpecial": "Caracteres especiais",
   "genPsBrackets": "Colchetes",
   "genPsHigh": "Caracteres ASCII altos",
-  "genPsAmbiguous": "Símbolos ambíguos",
+  "genPsAmbiguous": "Caracteres ambíguos",
   "genPsInclude": "Símbolos adicionais para incluir",
   "genPsExample": "Exemplo de senha gerada",
-  "genPsPattern": "Padrão",
-  "genPsPatternHelp": "Padrões podem ser utilizados para especificar regras customizadas para selecionar caracteres. Por exemplo, 1-AA irá gerar senhas começando com um digito, seguido por um hífen e duas letras. Você pode usar estes símbolos:",
-  "genPsAllRanges": "Todos os simbolos",
+  "genPsPattern": "Padrões",
+  "genPsPatternHelp": "Padrões podem ser utilizados para especificar regras personalizadas para a seleção de caracteres. Por exemplo, 1-AA irá gerar senhas começando com um digito, seguido por um hífen e duas letras. Você pode usar estes caracteres:",
+  "genPsAllRanges": "Todos os símbolos",
   "genPsIncluded": "Símbolos adicionais acima",
   "keyChangeTitleRemote": "Chave mestra alterada",
   "keyChangeMessageRemote": "A chave mestra foi alterada para este banco de dados. Por favor, insira uma nova chave",
   "keyChangeTitleExpired": "Chave mestra expirada",
   "keyChangeMessageExpired": "A chave mestra para este banco de dados expirou. Por favor, insira uma nova chave",
   "keyChangeRepeatPassword": "Senha, mais uma vez",
-  "keyEnter": "Entrar",
+  "keyEnter": "Tecle Enter para",
   "keyEsc": "Esc",
-  "iconFavTitle": "Faça o download e use o favicon do site",
+  "iconFavTitle": "Baixar e usar o favicon do site",
   "iconSelCustom": "Selecionar ícone personalizado",
   "listEmptyTitle": "Vazio",
   "listEmptyAdd": "Adicionar com o botão {} acima",
   "listGroup": "Grupo",
-  "listNoWebsite": "Sem site",
-  "listNoUser": "Sem usuário",
+  "listNoWebsite": "sem site",
+  "listNoUser": "sem usuário",
   "listNoAttachments": "sem anexos",
   "listAddTemplateHeader": "Modelos",
   "listAddTemplateBody1": "Os modelos permitem que você crie entradas com um clique. Adicione algo ao modelo de entrada e clique em {} novamente para usar este modelo.",
-  "listAddTemplateBody2": "Você sempre encontrará seus modelos no grupo {}.",
+  "listAddTemplateBody2": "Você pode sempre encontrar seus modelos no grupo {}.",
   "searchAddNew": "Adicionar novo",
   "searchSort": "Ordenar",
   "searchCreated": "Criado",
@@ -215,9 +215,9 @@
   "openError": "Erro",
   "openErrorDescription": "Ocorreu um erro ao abrir o arquivo",
   "openErrorDescriptionMaybeTouchIdChanged": "Esse erro é similar ao que acontece quando a configuração do Touch ID é alterada, por exemplo, quando você adiciona ou remove um dedo. Se esse é o caso, va nas Configurações, desabilite o Touch ID e habilite ele novamente.",
-  "openErrorFileNotFound": "Arquivo",
+  "openErrorFileNotFound": "Arquivo não encontrado",
   "openListErrorBody": "Ocorreu um erro ao carregar a lista de arquivos",
-  "openShowAllFiles": "Mostrar todos",
+  "openShowAllFiles": "Mostrar todos os arquivos",
   "openFileNoCacheError": "Arquivo não encontrado no armazenamento em cache. Isto pode acontecer porque o armazenamento do navegador foi limpo. Para abrir o arquivo, remova-o de KeeWeb e adicione-o novamente.",
   "openChalRespHeader": "resposta-do-desafio",
   "openChalRespLoading": "Carregando a lista de YubiKeys",
@@ -226,7 +226,7 @@
   "openChalRespErrorEmptyMac": "Primeira vez utilizando essa funcionalidade no macOS? KeeWeb precisa ser adicionado nas configurações de monitoração de entrada",
   "detAttDownload": "Shift-clique no botão anexo para baixar ou",
   "detAttDelToRemove": "Excluir para remover",
-  "detAttSave": "Salvar como ...",
+  "detAttSave": "Salvar como...",
   "detEmpty": "Suas senhas serão exibidas aqui",
   "detGroupRestore": "Para restaurar este grupo, arraste-o para qualquer grupo fora do lixo",
   "detHistoryClickPoint": "Clique na linha de tempo do histórico de entrada para ver o estado",
@@ -622,6 +622,37 @@
   "setPlAutoUpdate": "Atualizar automaticamente",
   "setPlLoadGallery": "Carregar a galeria de plugins",
   "setBrowserTitle": "Navegador",
+  "setBrowserIntroDesktop": "KeeWeb pode digitar senhas automaticamente, usando auto-teclar. Porém, usar uma extensão de navegador é um modo muito mais conveniente de fazer isso. KeeWeb é compatível com as extensões:",
+  "setBrowserIntroKeeWebConnect": "a extensão oficial do KeeWeb. É feita com as funcionalidades do KeeWeb em mente, mas você pode sentir falta de alguma funcionalidade existente na outra extensão.",
+  "setBrowserIntroKeePassXcBrowser": "esta extensão foi desenvolvida por KeePassXC. Já está no mercado há bastante tempo e é bem sólida. Não é parte do KeeWeb e pode ter problemas de compatibilidade.",
+  "setBrowserIntroWeb": "Instale nossa extensão de navegador para autocompletar senhas em diferentes páginas. A extensão conecta-se à aba do KeeWeb no navegador para trazer as senhas. Clique aqui para baixar a extensão:",
+  "setBrowserNotEnabled": "A integração com o navegador não está habilitada. Extensões não poderão conectar ao KeeWeb. Use as caixas abaixo para habilitar:",
+  "setBrowserEnablePerBrowser": "Habilite a integração com os navegadores usando as caixas abaixo:",
+  "setBrowserFocusIfLocked": "Abra o KeeWeb se uma extensão tentar conectar e não houver arquivo aberto",
+  "setBrowserFocusIfEmpty": "Mostre a tela de seleção se não for encontrada nenhuma correspondência por URL",
+  "setBrowserOtherBrowsers": "Outros navegadores",
+  "setBrowserExtensionFor": "para {}",
+  "setBrowserExtensionNotSupported": "Não suportado",
+  "setBrowserExtensionHelp": "Como instalar?",
+  "setBrowserExtensionInstall": "Instalar a extensão",
+  "setBrowserExtensionKPXCWarnHeader": "{} irá parar de funcionar",
+  "setBrowserExtensionKPXCWarnBody1": "Infelizmente não é possível conectar uma extensão a vários aplicativos. Se você conectar a extensão ao KeeWeb, a associação atual com {} irá parar de funcionar. Mesmo se você desmarcar esta caixa, a associação com {} não será restaurada. Para que volte a funcionar, configure a integração com o navegador nas configurações de {}.",
+  "setBrowserExtensionKPXCWarnBody2": "Configurar extensão para usar o KeeWeb?",
+  "setBrowserSessions": "Sessões",
+  "setBrowserSessionsEmpty": "Nenhuma sessão conectada.",
+  "setBrowserSessionsIntro": "Estas extensões estão conectadas ao KeeWeb.",
+  "setBrowserSessionsActiveTooltip": "Sessão ativa",
+  "setBrowserSessionsActiveText": "Esta sessão está ativa. Ela pode trocar dados com o KeeWeb de acordo com as seguintes permissões:",
+  "setBrowserSessionsInactiveTooltip": "Sessão Inativa",
+  "setBrowserSessionsInactiveText": "Esta sessão está inativa. A extensão está conectada ao KeeWeb, porém, ainda não tentou trocar dados. Quando a extensão solicitar algum dado, você poderá escolher o que pode ser compartilhado.",
+  "setBrowserSessionsDeniedTooltip": "Acesso negado",
+  "setBrowserSessionsDeniedText": "Esta sessão está inativa. A extensão está conectada ao KeeWeb, porém, você negou acesso aos dados.",
+  "setBrowserSessionsConnectedDate": "Conectado",
+  "setBrowserSessionsTerminate": "Encerrar esta sessão",
+  "setBrowserSessionsAccessToFiles": "Permitir acesso aos arquivos",
+  "setBrowserSessionsNoFileAccess": "A extensão não possui acesso a nenhum arquivo. Ela não será capaz de trazer nenhuma senha do KeeWeb.",
+  "setBrowserSessionsPasswordsRead": "Senhas lidas",
+  "setBrowserSessionsPasswordsWritten": "Senhas salvas",
   "setDevicesTitle": "Dispositivos",
   "setDevicesEnableUsb": "Habilitar interação com dispositivos USB",
   "setDevicesYubiKeyIntro": "É recomendado ler {} antes de começar a usar a YubiKey.",
@@ -677,6 +708,8 @@
   "dropboxLinkFull": "Dropbox completo ou qualquer pasta",
   "dropboxLinkCustom": "Aplicativo Dropbox próprio",
   "gdriveSharedWithMe": "Compartilhado comigo",
+  "gdriveSharedDrives": "Drives compartilhados",
+  "gdriveTeamDrives": "Drives do time",
   "webdavSaveMethod": "Salvar método",
   "webdavSaveMove": "Carregar um arquivo temporário e mover",
   "webdavSavePut": "Sobrescreva o arquivo kdbx com PUT",
@@ -705,5 +738,39 @@
   "yubiKeyDisabledErrorHeader": "O USB está desabilitado",
   "yubiKeyDisabledErrorBody": "A YubiKey é obrigatória para abrir esse arquivo, por favor habilite dispositivos USB nas configurações.",
   "yubiKeyErrorWithCode": "Erro na YubiKey, código {}",
-  "bioOpenAuthPrompt": "abrir \"{}\""
+  "bioOpenAuthPrompt": "abrir \"{}\"",
+  "extensionErrorNoOpenFiles": "Nenhum arquivo aberto",
+  "extensionErrorUserRejected": "A solicitação foi negada",
+  "extensionErrorNoMatches": "Nenhum login correspondente",
+  "extensionErrorAlertDisplayed": "Não é possível perguntar agora porque há outro diálogo aberto. Por favor tente novamente",
+  "extensionConnectHeader": "Troca de dados com extensão",
+  "extensionConnectIntro": "Uma extensão de navegador, que se identifica por {}, está tentando trocar dados com o KeeWeb.",
+  "extensionConnectUnknownActivity": "KeeWeb não verifica se a aplicação conectada é quem ela diz que é. Aprove a solicitação apenas se reconhecer esta atividade.",
+  "extensionConnectFiles": "Nesta sessão, permitir acesso a:",
+  "extensionConnectAllOtherFiles": "Todos os outros arquivos",
+  "extensionConnectAllFiles": "Todos os arquivos",
+  "extensionConnectAskGet": "Perguntar antes de retornar senhas para a extensão:",
+  "extensionConnectAskGetMultiple": "se houver mais do que uma correspondência",
+  "extensionConnectAskGetAlways": "sempre",
+  "extensionConnectAskSave": "Perguntar antes de salvar novas senhas no KeeWeb:",
+  "extensionConnectAskSaveAlways": "sempre",
+  "extensionConnectAskSaveAuto": "quando não for possível salvar automaticamente",
+  "extensionConnectSettingsAreForSession": "As configurações feitas aqui só são válidas para a sessão ativa. Você pode gerenciar as sessões ativas nas configurações do KeeWeb:",
+  "extensionUnlockMessage": "Desbloqueie para conectar à extensão do navegador",
+  "extensionNewGroupHeader": "Novo grupo",
+  "extensionNewGroupBody": "{} está tentando criar um novo grupo. Permitir?",
+  "extensionNewGroupPath": "Caminho do grupo",
+  "extensionNewGroupFile": "Este grupo será criado em:",
+  "extensionSaveEntryHeader": "Salvar senha",
+  "extensionSaveEntryBody": "{} está tentando salvar uma senha. Permitir?",
+  "extensionSaveEntryAuto": "Salvar outras senhas automaticamente nesta sessão",
+  "extensionSaveEntryNewGroup": "novo grupo",
+  "extensionSelectPasswordFor": "Selecione uma senha para {}",
+  "selectEntryHeader": "Selecionar entrada",
+  "selectEntryEnterHint": "usar a entrada marcada",
+  "selectEntryTypingHint": "Digite para filtrar",
+  "selectEntryContains": "Contém texto",
+  "selectEntrySubdomains": "Subdomínios",
+  "selectEntryFieldHeader": "Selecionar campo",
+  "selectEntryFieldTouch": "Pressione o botão no seu dispositivo para gerar um código de uso único."
 }
