--- a/docs/translations/tr/tr.json
+++ b/docs/translations/tr/tr.json
@@ -65,6 +65,8 @@
   "sysMenuUnhide": "Tümünü Göster",
   "sysMenuQuit": "Çık {}",
   "sysMenuEdit": "Düzenle",
+  "sysMenuUndo": "Geri al",
+  "sysMenuRedo": "Yinele",
   "sysMenuCut": "Kes",
   "sysMenuCopy": "Kopyala",
   "sysMenuPaste": "Yapıştır",
@@ -96,15 +98,15 @@
   "genPresetLong": "uzun",
   "genPresetPin4": "4 haneli PIN",
   "genPresetMac": "MAC adresi",
-  "genPresetHash128": "128-bit hash",
-  "genPresetHash256": "256-bit hash",
+  "genPresetHash128": "128-bit sağlama",
+  "genPresetHash256": "256-bit sağlama",
   "genHidePass": "Parolayı gizle",
   "genShowPass": "Parolayı göster",
   "grpTitle": "Küme",
   "grpSearch": "Bu kümedeki girdileri aramayı etkinleştir",
   "grpAutoType": "Otomatik yazım etkin",
   "grpAutoTypeSeq": "Otomatik yazım dizisi",
-  "grpAutoTypeSeqDefault": "Öntanımlı otomatik yazım dizisini kullan",
+  "grpAutoTypeSeqDefault": "Varsayılan otomatik yazım dizisini kullan",
   "grpTrash": "Kümeyi tüm girdileriyle birlikte sil",
   "tagTitle": "Etiket",
   "tagTrash": "Etiketi tüm girdilerden kaldır",
@@ -224,7 +226,7 @@
   "openChalRespErrorEmptyMac": "MacOS'ta bu özelliği ilk kez mi kullanıyorsunuz? Güvenlik ayarlarının Giriş İzleme bölümüne KeeWeb eklenmelidir.",
   "detAttDownload": "Eki indirmek için Shift tuşuna basarak tıklayın veya",
   "detAttDelToRemove": "Kaldırmak için sil",
-  "detAttSave": "Farklı kaydet",
+  "detAttSave": "Farklı kaydet...",
   "detEmpty": "Parolalarınız burada gösterilecek",
   "detGroupRestore": "Bu kümeyi geri yüklemek için lütfen çöp kutusunun dışındaki herhangi bir kümeye sürükleyin",
   "detHistoryClickPoint": "Durumu görüntülemek için girdi geçmişine ait zaman çizelgesi noktasına tıklayın",
@@ -269,7 +271,7 @@
   "detCopyHint": "Alan değerini başlığına tıklayarak kopyalayabilirsiniz",
   "detMore": "daha fazla",
   "detClickToAddField": "yeni bir alan eklemek için tıklayın",
-  "detMenuAddNewField": "Yeni alan ekle",
+  "detMenuAddNewField": "Yeni bir alan ekle",
   "detMenuAddNewWebsite": "Başka bir web sitesi ekle",
   "detMenuShowEmpty": "Boş alanları göster",
   "detMenuHideEmpty": "Boş alanları gizle",
@@ -391,7 +393,7 @@
   "setGenExtractingUpdate": "Güncelleme çıkartılıyor...",
   "setGenCheckErr": "Yeni sürüm indirilirken bir hata oluştu",
   "setGenNeverChecked": "Güncellemeleri asla kontrol etme",
-  "setGenRestartToUpdate": "Güncellemek için uygulamayı yeniden başlat",
+  "setGenRestartToUpdate": "Güncellemek için KeeWeb'i yeniden başlat",
   "setGenDownloadAndRestart": "Güncellemeyi indir ve yeniden başlat",
   "setGenAppearance": "Görünüm",
   "setGenTheme": "Tema",
@@ -422,7 +424,7 @@
   "setGenFontSizeLarge": "Geniş",
   "setGenFontSizeLargest": "En geniş",
   "setGenTitlebarStyle": "Pencere biçimi (yeniden başlatma gerekli)",
-  "setGenTitlebarStyleDefault": "Öntanımlı",
+  "setGenTitlebarStyleDefault": "Varsayılan",
   "setGenTitlebarStyleHidden": "Özel başlık",
   "setGenTitlebarStyleHiddenInset": "Özel başlık, sürüklenebilir pencere",
   "setGenShowSubgroups": "Tüm alt kümelerden girdileri göster",
@@ -451,12 +453,15 @@
   "setGenClearSeconds": "{} saniye içinde",
   "setGenClearMinute": "Bir dakika içinde",
   "setGenMinInstead": "Kapatmak yerine simge durumuna küçült",
+  "setGenMinOnFieldCopy": "Alan kopyasında simge durumuna küçült",
   "setGenLock": "Otomatik kilit",
   "setGenLockMinimize": "Uygulama küçültüldüğünde",
   "setGenLockCopy": "Parola kopyalandıktan sonra",
   "setGenLockAutoType": "Otomatik yazımdan sonra",
   "setGenLockOrSleep": "Bilgisayar kilitlendiğinde veya uykuya geçtiğinde",
   "setGenStorage": "Depolama",
+  "setGenDisableOfflineStorage": "Yüklenen dosyaları çevrimdışı depolamada önbelleğe alma",
+  "setGenShortLivedStorageToken": "Bulut depolama sağlayıcılarında kısa süreli oturumlar kullanın",
   "setGenStorageLogout": "Oturumu kapat",
   "setGenShowAdvanced": "Gelişmiş ayarları göster",
   "setGenDevTools": "Geliştirici araçlarını göster",
@@ -466,13 +471,29 @@
   "setGenShowAppLogs": "Uygulama günlüklerini göster",
   "setGenReloadApp": "Uygulamayı yeniden yükle",
   "setGenFieldLabelDblClickAutoType": "Alan etiketlerine çift tıklayınca otomatik yaz",
+  "setGenTouchId": "Touch ID",
+  "setGenTouchIdDisabled": "Touch ID'yi kullanma",
+  "setGenTouchIdMemory": "Yalnızca KeeWeb çalışırken Touch ID ile kilidi aç",
+  "setGenTouchIdFile": "Ana parola yerine her zaman Touch ID kullan",
+  "setGenTouchIdPass": "Sonra ana parola iste",
+  "setGenAudit": "Denetim",
+  "setGenAuditPasswords": "Parola gücüyle ilgili uyarıları göster",
+  "setGenAuditPasswordEntropy": "Parola uzunluğunu ve rastgele oluşunu kontrol et",
+  "setGenExcludePinsFromAudit": "123456 gibi kısa sayısal PIN kodlarını asla kontrol etme",
+  "setGenCheckPasswordsOnHIBP": "Bir çevrimiçi hizmeti kullanarak parolaları kontrol et {}",
+  "setGenHelpHIBP": "KeeWeb, çevrimiçi bir hizmet kullanarak parolalarınızın daha önce bir veri ihlaline maruz kalıp kalmadığını kontrol edebilir. Çevrimiçi olarak gönderilen verilere dayanarak parolanız kurtarılamaz, ancak bu şekilde kontrol edilen parolaların sayısı açığa çıkabilir. Bu hizmeti kullanırken gizliliğiniz hakkında daha fazla bilgiyi {} bulabilirsiniz. Bu seçenek etkinleştirilirse, KeeWeb parolalarınızı orada otomatik olarak kontrol edecektir.",
+  "setGenHelpHIBPLink": "burada",
+  "setGenAuditPasswordAge": "Eski parolalar",
+  "setGenAuditPasswordAgeOff": "Eski parolalar hakkındaki uyarıları gösterme",
+  "setGenAuditPasswordAgeOneYear": "Bir yıldan eski parolalar için uyarıları göster",
+  "setGenAuditPasswordAgeYears": "{} yıldan eski parolalar için uyarıları göster",
   "setFilePath": "Dosya yolu",
   "setFileStorage": "Bu dosya {} den yüklenmiştir.",
   "setFileIntl": "Bu dosya dahili uygulama deposunda saklanır",
   "setFileLocalHint": "Yerel dosyalar ile sorunsuz çalışmak ister misiniz?",
   "setFileDownloadApp": "Bir masaüstü uygulaması indir",
   "setFileSave": "Kaydet",
-  "setFileSaveTo": "Farklı kaydet ...",
+  "setFileSaveTo": "Farklı kaydet...",
   "setFileClose": "Kapat",
   "setFileSync": "Eşitle",
   "setFileSyncVerb": "Eşitle",
@@ -490,7 +511,7 @@
   "setFileKeyFile": "Anahtar dosyası",
   "setFileSelKeyFile": "Anahtar dosyasını seç",
   "setFileNames": "İsimler",
-  "setFileDefUser": "Öntanımlı kullanıcı",
+  "setFileDefUser": "Varsayılan kullanıcı",
   "setFileEnableTrash": "Çöp kutusunu etkinleştir",
   "setFileHistMode": "Girdi geçmişi",
   "setFileHistLimited": "Eski geçmiş kayıtlarını otomatik olarak sil",
@@ -600,6 +621,38 @@
   "setPlTranslateLink": "uygulamayı kendi diline çevir",
   "setPlAutoUpdate": "Otomatik olarak güncelle",
   "setPlLoadGallery": "Eklenti galerisini yükle",
+  "setBrowserTitle": "Tarayıcı",
+  "setBrowserIntroDesktop": "KeeWeb otomatik yazım kullanarak parola girebilir, ancak bir tarayıcı eklentisi bunu yapmanın daha uygun bir yolu olabilir. KeeWeb iki tarayıcı uzantısını destekler:",
+  "setBrowserIntroKeeWebConnect": "Resmi KeeWeb eklentisi, KeeWeb'in özellikleri göz önünde bulundurularak oluşturulmuştur, ancak diğer eklentilerde bulunabilecek bazı gelişmiş özellikleri kaçırabilirsiniz.",
+  "setBrowserIntroKeePassXcBrowser": "Bu eklenti KeePassXC için geliştirildi, bir süredir piyasada ve oldukça sağlam. Eklenti, KeeWeb'in bir parçası değildir ve uyumluluk sorunları olabilir.",
+  "setBrowserIntroWeb": "Farklı sayfalarda KeeWeb'den parolaları otomatik olarak doldurmak için tarayıcı eklentimizi kurun. Tarayıcı eklentisi, parolaları almak için tarayıcınızdaki bir KeeWeb sekmesine bağlanacaktır. Eklentiyi indirmek için buraya tıklayın:",
+  "setBrowserNotEnabled": "Tarayıcı bütünleşmesi etkinleştirilmedi, eklentiler KeeWeb'e bağlanamayacak. Etkinleştirmek için aşağıdaki onay kutularını kullanın:",
+  "setBrowserEnablePerBrowser": "Aşağıdaki onay kutularını kullanarak tarayıcı bütünleşmesini etkinleştirin:",
+  "setBrowserFocusIfLocked": "Açık dosya yokken bir tarayıcı eklentisi bağlanmaya çalışırsa KeeWeb'i aç",
+  "setBrowserFocusIfEmpty": "URL'ye göre eşleşme yoksa girdi seçim ekranını göster",
+  "setBrowserOtherBrowsers": "Diğer tarayıcılar",
+  "setBrowserExtensionFor": "{} için",
+  "setBrowserExtensionNotSupported": "Desteklenmiyor",
+  "setBrowserExtensionHelp": "Nasıl kurulur?",
+  "setBrowserExtensionInstall": "Eklentiyi kur",
+  "setBrowserExtensionKPXCWarnHeader": "{} çalışmayı durduracak",
+  "setBrowserExtensionKPXCWarnBody1": "Bir eklentiyi birkaç uygulamaya bağlamak mümkün değil. Eklentiyi KeeWeb'e bağlarsanız, uygulama ilişkilendirmesinin üzerine yazarız, bu da {} ile bütünleşmenin çalışmayı durduracağı anlamına gelir. Bu onay kutusunun işaretini kaldırsanız bile, {} ile olan ilişki geri yüklenmeyecektir. Tekrar çalışmasını sağlamak için {} ayarlarında tarayıcı bütünleşmesini yapılandırın.",
+  "setBrowserExtensionKPXCWarnBody2": "KeeWeb'i kullanmak için eklenti yapılandırılsın mı?",
+  "setBrowserSessions": "Oturumlar",
+  "setBrowserSessionsEmpty": "Bağlı oturum yok.",
+  "setBrowserSessionsIntro": "Bu eklenti artık KeeWeb'e bağlı.",
+  "setBrowserSessionsActiveTooltip": "Etkin oturum",
+  "setBrowserSessionsActiveText": "Bu oturum aktif. Aşağıdaki izinlere dayalı olarak KeeWeb ile veri alışverişi yapabilir:",
+  "setBrowserSessionsInactiveTooltip": "Etkin olmayan oturum",
+  "setBrowserSessionsInactiveText": "Bu oturum etkin değil. Eklenti KeeWeb'e bağlı, ancak veri alışverişi yapmayı denemedi. Eklenti herhangi bir şey istediğinde, ne paylaşmak istediğinizi seçebileceksiniz.",
+  "setBrowserSessionsDeniedTooltip": "Giriş engellendi",
+  "setBrowserSessionsDeniedText": "Bu oturum etkin değil. Eklenti KeeWeb'e bağlı, ancak verilere erişimi reddettiniz.",
+  "setBrowserSessionsConnectedDate": "Bağlı",
+  "setBrowserSessionsTerminate": "Bu oturumu sonlandır",
+  "setBrowserSessionsAccessToFiles": "Dosyalara erişime izin ver",
+  "setBrowserSessionsNoFileAccess": "Eklentinin herhangi bir dosyaya erişimi yok, KeeWeb'den parolaları alamayacak.",
+  "setBrowserSessionsPasswordsRead": "Parolalar okundu",
+  "setBrowserSessionsPasswordsWritten": "Parolalar kaydedildi",
   "setDevicesTitle": "Cihazlar",
   "setDevicesEnableUsb": "USB cihazlarıyla etkileşimi etkinleştir",
   "setDevicesYubiKeyIntro": "YubiKey kullanmadan önce {} okumanız önerilir.",
@@ -648,13 +701,15 @@
   "dropboxAppSecretDesc": "Gizli kodu uygulama anahtarının yanında bulabilirsiniz",
   "dropboxFolder": "Uygulama klasörü",
   "dropboxFolderDesc": "Uygulamanız tüm Dropbox'lara bağlıysa (uygulama klasörü değil), klasörü kdbx dosyalarınızla buraya ayarlayın",
-  "dropboxFolderSettingsDesc": "Dropbox'ınızda dosyaların depolanacağı herhangi bir klasörü seçin (öntanımlı olarak kök klasör)",
-  "dropboxFolderPlaceholder": "öntanımlı klasör",
+  "dropboxFolderSettingsDesc": "Dropbox üstünde dosyaların depolanacağı herhangi bir klasör seçin (varsayılan kök klasör)",
+  "dropboxFolderPlaceholder": "varsayılan klasör",
   "dropboxLink": "Uygulamayı bağla",
   "dropboxLinkApp": "Uygulama klasörü (Uygulama/KeeWeb)",
-  "dropboxLinkFull": "Tam Dropbox veya herhangi bir klasör",
-  "dropboxLinkCustom": "Kendi Dropbox uygulaması",
+  "dropboxLinkFull": "Dropbox veya herhangi bir klasör",
+  "dropboxLinkCustom": "Dropbox uygulaması",
   "gdriveSharedWithMe": "Benimle paylaşılanlar",
+  "gdriveSharedDrives": "Paylaşımlı alan",
+  "gdriveTeamDrives": "Takım alanı",
   "webdavSaveMethod": "Yöntemi kaydet",
   "webdavSaveMove": "Karşıya geçici bir dosya yükle ve taşı",
   "webdavSavePut": "PUT ile kdbx dosyasının üzerine yaz",
@@ -682,5 +737,40 @@
   "yubiKeyTouchRequestedBody": "Lütfen YubiKey'nize {} seri numarası ile dokunun",
   "yubiKeyDisabledErrorHeader": "USB devre dışı",
   "yubiKeyDisabledErrorBody": "Bu dosyayı açmak için YubiKey gereklidir, lütfen ayarlardan USB cihazlarını etkinleştirin.",
-  "yubiKeyErrorWithCode": "YubiKey hatası, kod {}."
+  "yubiKeyErrorWithCode": "YubiKey hatası, kod {}.",
+  "bioOpenAuthPrompt": "aç \"{}\"",
+  "extensionErrorNoOpenFiles": "Açık dosya yok",
+  "extensionErrorUserRejected": "İstek reddedildi",
+  "extensionErrorNoMatches": "Eşleşen giriş yok",
+  "extensionErrorAlertDisplayed": "Görüntülenen başka bir iletişim kutusu olduğundan sorgulamıyor, lütfen tekrar deneyin",
+  "extensionConnectHeader": "Eklenti veri alışverişi",
+  "extensionConnectIntro": "Kendini {} olarak tanımlayan bir tarayıcı eklentisi, KeeWeb ile veri alışverişi yapmaya çalışıyor.",
+  "extensionConnectUnknownActivity": "KeeWeb, bağlı uygulamanın göründüğü gibi olduğunu doğrulamaz. İsteği yalnızca bu etkinliği tanıyorsanız onaylayın.",
+  "extensionConnectFiles": "Bu oturumda şunlara erişime izin verin:",
+  "extensionConnectAllOtherFiles": "Diğer tüm dosyalar",
+  "extensionConnectAllFiles": "Tüm dosyalar",
+  "extensionConnectAskGet": "Eklentiye parolaları iade etmeden önce sor:",
+  "extensionConnectAskGetMultiple": "birden fazla eşleşme varsa",
+  "extensionConnectAskGetAlways": "her zaman",
+  "extensionConnectAskSave": "Yeni parolaları KeeWeb'e kaydetmeden önce sor:",
+  "extensionConnectAskSaveAlways": "her zaman",
+  "extensionConnectAskSaveAuto": "otomatik olarak kaydetmek mümkün olmadığında",
+  "extensionConnectSettingsAreForSession": "Burada seçtiğiniz ayarlar sadece aktif oturum için geçerlidir. Oturumları KeeWeb ayarlarında görüntüleyebilir ve yönetebilirsiniz.",
+  "extensionUnlockMessage": "Bir tarayıcı eklentisi bağlamak için kilidi açın",
+  "extensionNewGroupHeader": "Yeni grup",
+  "extensionNewGroupBody": "{} yeni bir grup oluşturmaya çalışıyor. Buna izin ver?",
+  "extensionNewGroupPath": "Grup yolu",
+  "extensionNewGroupFile": "Bu grup şurada oluşturulacak:",
+  "extensionSaveEntryHeader": "Parolayı kaydet",
+  "extensionSaveEntryBody": "{} bir parola kaydetmeye çalışıyor. Buna izin ver?",
+  "extensionSaveEntryAuto": "Bu oturumda diğer parolaları otomatik olarak kaydet",
+  "extensionSaveEntryNewGroup": "yeni grup",
+  "extensionSelectPasswordFor": "{} için bir parola seç",
+  "selectEntryHeader": "Girdi seç",
+  "selectEntryEnterHint": "Vurgulanan girdiyi kullan",
+  "selectEntryTypingHint": "Filtrelemek için yazmaya başlayın",
+  "selectEntryContains": "Metin içerir",
+  "selectEntrySubdomains": "Alt alanlar",
+  "selectEntryFieldHeader": "Alan seç",
+  "selectEntryFieldTouch": "Tek seferlik bir kod oluşturmak için cihazınızdaki düğmeye basın."
 }
