--- a/docs/translations/zh-TW/zh-TW.json
+++ b/docs/translations/zh-TW/zh-TW.json
@@ -217,6 +217,7 @@
   "openListErrorBody": "讀取檔案清單時發生錯誤",
   "openShowAllFiles": "顯示所有檔案",
   "openFileNoCacheError": "檔案不存在於快取中。這個情況可能是由瀏覽器存儲資料被清空所引起。將檔案從KeeWeb中刪除後重新加入以開啟此檔案。",
+  "openChalRespHeader": "詰問-回應",
   "openChalRespLoading": "正在讀取Yubikey清單",
   "openChalRespSelectYubiKey": "選擇一個您想使用的Yubikey",
   "openChalRespErrorEmpty": "找不到Yubikey",
@@ -337,6 +338,9 @@
   "autoTypeMsgNoWindow": "我們無法獲取使用中視窗的標題，請自行搜尋紀錄",
   "autoTypeMsgMatchedByWindow": "選擇用於 {} 的密碼",
   "autoTypeNoMatches": "無吻合紀錄",
+  "autoTypeSelectionHintAction": "只輸入密碼",
+  "autoTypeSelectionHintOpt": "只輸入使用者名稱",
+  "autoTypeSelectionHintShift": "其他欄位",
   "autoTypeSelectionOtp": "一次性密碼",
   "appSecWarn": "不安全！",
   "appSecWarnBody1": "你正使用不安全的連線載入本程式。可能有人正在監察你的活動並偷取你的密碼。除非您很清楚自己正在做什麼，否則我們強烈建議你停止載入。",
@@ -351,6 +355,8 @@
   "appSaveError": "儲存錯誤",
   "appSaveErrorBody": "未能自動儲存檔案",
   "appSaveErrorBodyMul": "未能自動儲存檔案：",
+  "appSaveErrorExitLoseChanges": "離開且遺失所有變更",
+  "appSaveErrorExitLoseChangesBody": "你可以離開且遺失所有變更，或是到檔案設定以匯出檔案。",
   "appSettingsError": "程式載入錯誤",
   "appSettingsErrorBody": "載入程式設定時發生錯誤。請檢查程式 URL，或通知你的管理員。",
   "appNotSupportedError": "您的瀏覽器不支援某些此程式會用到的重要功能。",
@@ -410,6 +416,10 @@
   "setGenTableView": "上下欄檢視",
   "setGenColorfulIcons": "在列表顯示彩色自訂圖示",
   "setGenFunction": "功能",
+  "setGenAutoSyncOnClose": "在關閉時自動儲存和同步",
+  "setGenAutoSyncTimer": "定期自動儲存和同步",
+  "setGenAutoSyncTimerOff": "已停用",
+  "setGenAutoSyncTimerInterval": "每 {} 分鐘",
   "setGenRememberKeyFiles": "記住密鑰文件",
   "setGenNoRememberKeyFiles": "不記憶",
   "setGenRememberKeyFilesData": "保存在應用內",
@@ -425,27 +435,32 @@
   "setGenClearSeconds": "{} 秒後",
   "setGenClearMinute": "1 分鐘後",
   "setGenMinInstead": "最小化程式，而不關閉",
+  "setGenMinOnFieldCopy": "在複製欄位時最小化",
   "setGenLock": "自動鎖定",
   "setGenLockMinimize": "最小化後自動鎖定",
   "setGenLockCopy": "複製密碼後自動鎖定",
   "setGenLockAutoType": "自動輸入後自動鎖定",
   "setGenLockOrSleep": "當電腦在鎖定或睡眠狀態時",
   "setGenStorage": "儲存",
+  "setGenStorageLogout": "登出",
   "setGenShowAdvanced": "顯示進階設定",
   "setGenDevTools": "顯示開發人員工具",
   "setGenTryBeta": "嘗試測試版直到重啓",
   "setGenTryBetaWarning": "檔案未儲存",
   "setGenTryBetaWarningBody": "請儲存所有檔案後再按這個按鈕",
   "setGenShowAppLogs": "顯示程式紀錄檔",
+  "setGenReloadApp": "重新載入應用程式",
   "setGenTouchId": "Touch ID",
   "setGenTouchIdDisabled": "不使用 Touch ID",
   "setGenTouchIdMemory": "KeeWeb 執行中時，以 Touch ID 解鎖",
+  "setGenTouchIdFile": "總是使用 Touch ID，而非主密鑰",
   "setGenTouchIdPass": "超過一定時間後要求輸入主密碼",
   "setGenAudit": "檢查",
   "setGenAuditPasswords": "顯示密碼強度相關警告",
   "setGenAuditPasswordEntropy": "檢查密碼長度及變化",
   "setGenExcludePinsFromAudit": "不要檢查短的數字 PIN 碼（如 123456）",
   "setGenCheckPasswordsOnHIBP": "使用線上服務 {} 檢查密碼",
+  "setGenHelpHIBP": "KeeWeb 能夠用線上服務檢查您的密碼是否曾在之前的資料外洩中被洩漏。以此方式傳送的資料無法被還原成您的密碼，但檢查過的密碼數量可能會被揭露。更多關於使用此服務時的隱私權請參照 {}。若此選項已啟用，KeeWeb 將會自動檢查您的密碼。",
   "setGenAuditPasswordAge": "舊密碼",
   "setGenAuditPasswordAgeOff": "不顯示舊密碼相關警告",
   "setGenAuditPasswordAgeOneYear": "為超過 1 年未變更的舊密碼顯示警告",
@@ -468,6 +483,7 @@
   "setFileSyncError": "同步錯誤",
   "setFilePass": "主密碼",
   "setFileConfirmPass": "確認主密碼",
+  "setFilePassChange": "要改變您的密碼，請在此確認欄位中輸入",
   "setFilePassChanged": "密碼已更改；留空此欄以使用舊密碼",
   "setFilePassNotMatch": "密碼不相符，請重新輸入",
   "setFileKeyFile": "密鑰檔",
@@ -475,6 +491,7 @@
   "setFileNames": "名稱",
   "setFileDefUser": "預設帳戶名稱",
   "setFileEnableTrash": "啟用回收桶",
+  "setFileHistMode": "紀錄歷史",
   "setFileHistLimited": "自動刪除歷史記錄",
   "setFileHistDisabled": "不要儲存歷史紀錄",
   "setFileHistUnlimited": "保留歷史紀錄",
@@ -488,6 +505,8 @@
   "setFileBackupNowWorking": "備份中...",
   "setFileBackupError": "備份錯誤",
   "setFileBackupErrorDescription": "寫入備份檔案時發生錯誤",
+  "setFileBackupErrorIsDir": "無效的備份路徑",
+  "setFileBackupErrorIsDirDescription": "備份路徑似乎是指向一個資料夾，請改為指定在資料夾裡的一個檔案名稱。",
   "setFileBackupOnSave": "每次儲存檔案時",
   "setFileBackupDaily": "每日",
   "setFileBackupWeekly": "每週",
@@ -517,10 +536,14 @@
   "setFileFormatVersion": "檔案格式",
   "setFileExportRaw": "匯出密碼",
   "setFileExportRawBody": "匯出的檔案將包含沒有加密的所有密碼，確定要繼續嗎？",
+  "setFileDeviceIntro": "來自 {} 的一次性密碼將會在此程式中顯示。",
   "setFileDeviceSettings": "設定",
   "setFileYubiKey": "YubiKey",
   "setFileDontUseYubiKey": "不使用 YubiKey",
+  "setFileRefreshYubiKeyList": "重新整理列表",
   "setFileYubiKeyHeader": "YubiKey",
+  "setFileYubiKeyBody": "使用 YubiKey 作為主密鑰的一部分很危險，要是有東西出錯了，你可能會無法存取你的密碼。在改變此設定前，你是否已備份檔案？",
+  "setFileYubiKeyErrorEmptyMac": "看起來有個 YubiKey 已插入，但不可使用。安全起見，您必須額外允許 KeeWeb 監控輸入，才能存取 YubiKey。",
   "setShTitle": "快捷鍵",
   "setShShowAll": "顯示所有項目",
   "setShColors": "顯示有顏色的項目",
@@ -542,6 +565,7 @@
   "setShCopyOtp": "複製 OTP",
   "setShAutoTypeGlobal": "自動輸入",
   "setShCopyPassOnly": "複製密碼",
+  "setShRestoreApp": "開啟{}",
   "setShGlobal": "這些系統級別快捷鍵可作用在當KeeWeb程式於背景中執行時。你可點擊他們去設定自己想要的快捷鍵組合。",
   "setShLock": "鎖定密碼庫",
   "setShEdit": "按下一新的按鍵組合來設成快捷鍵",
@@ -588,6 +612,7 @@
   "setBrowserExtensionNotSupported": "未支援",
   "setBrowserExtensionHelp": "如何安裝？",
   "setBrowserExtensionInstall": "安裝套件",
+  "setBrowserExtensionKPXCWarnHeader": "{}將停止運作",
   "setBrowserExtensionKPXCWarnBody1": "很抱歉，您無法將一個套件同時連結多個 Apps。若您選擇連結 KeeWeb，將斷開與其他 App 間的連結，也就是說 {} 相關整合將失效。即使未來您取消此核取方塊，也無法自動重新連回 {}。若要恢復設定，請前往 {} 的相關頁面修改瀏覽器整合設定。",
   "setBrowserExtensionKPXCWarnBody2": "要將此套件連接 KeeWeb？",
   "setBrowserSessions": "當前連線",
@@ -600,6 +625,24 @@
   "setBrowserSessionsDeniedTooltip": "拒絕存取",
   "setBrowserSessionsDeniedText": "此連線目前已停用。該套件確實連結到 KeeWeb，但您已拒絕其存取資料。",
   "setBrowserSessionsConnectedDate": "已連線",
+  "setBrowserSessionsTerminate": "結束此工作階段",
+  "setBrowserSessionsAccessToFiles": "允許存取檔案",
+  "setBrowserSessionsPasswordsRead": "已讀取密碼",
+  "setBrowserSessionsPasswordsWritten": "已儲存密碼",
+  "setDevicesTitle": "裝置",
+  "setDevicesEnableUsb": "啟用與 USB 裝置的互動",
+  "setDevicesYubiKeyIntro": "在使用 YubiKey 前，推薦先閱讀{}。",
+  "setDevicesYubiKeyIntroLink": "此文件",
+  "setDevicesYubiKeyToolsDesc": "您必須先安裝一個叫做{}的工具，才能在此模式中使用 YubiKey。",
+  "setDevicesYubiKeyToolsDescLink": "點擊這裡",
+  "setDevicesYubiKeyToolsStatusChecking": "正在檢查是否已安裝{}",
+  "setDevicesYubiKeyToolsStatusOk": "已安裝{}",
+  "setDevicesYubiKeyToolsStatusError": "未安裝{}或無法運作",
+  "setDevicesYubiKeyOtpTitle": "一次性密碼",
+  "setDevicesYubiKeyOtpDesc": "YubiKey 能夠被用來產生許多不同服務的一次性密碼。",
+  "setDevicesYubiKeyOtpShowIcon": "在開始畫面中顯示圖示",
+  "setDevicesYubiKeyOtpAutoOpen": "當有開啟的檔案時，自動載入一次性密碼",
+  "setDevicesYubiKeyOtpMatchEntries": "顯示與紀錄相符的一次性密碼",
   "setAboutTitle": "關於",
   "setAboutBuilt": "本程式使用了這些厲害的工具建設",
   "setAboutLic": "授權",
@@ -646,5 +689,25 @@
   "importCsvRun": "匯入",
   "importIgnoreField": "忽略",
   "importTo": "紀錄將被匯入到",
-  "importNewFile": "新檔案名稱"
+  "importNewFile": "新檔案名稱",
+  "extensionConnectFiles": "在此工作階段中，允許下列存取：",
+  "extensionConnectAskGetMultiple": "當有多個符合",
+  "extensionConnectAskGetAlways": "總是",
+  "extensionConnectAskSave": "在儲存新密碼到 KeeWeb 之前先詢問：",
+  "extensionConnectAskSaveAlways": "總是",
+  "extensionConnectAskSaveAuto": "當無法自動儲存時",
+  "extensionNewGroupHeader": "新群組",
+  "extensionNewGroupBody": "{} 正在嘗試建立新群組，允許這行為？",
+  "extensionNewGroupPath": "群組路徑",
+  "extensionNewGroupFile": "此群組將會在此處建立：",
+  "extensionSaveEntryHeader": "儲存密碼",
+  "extensionSaveEntryBody": "{} 正嘗試儲存密碼，允許這行為？",
+  "extensionSaveEntryNewGroup": "新群組",
+  "selectEntryHeader": "選擇紀錄",
+  "selectEntryEnterHint": "使用被選中的紀錄",
+  "selectEntryTypingHint": "開始打字以進行篩選",
+  "selectEntryContains": "包含文字",
+  "selectEntrySubdomains": "子網域",
+  "selectEntryFieldHeader": "選擇欄位",
+  "selectEntryFieldTouch": "按下您的裝置上的按鈕，以產生一個一次性密碼。"
 }
